--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Vinay Somawat</title>
+	<title>Tom's Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -154,7 +154,7 @@
                 </div>
 			</section>
 
-            <div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
+            <div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/denver_night.jpg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -195,9 +195,9 @@
 							<div class="progress-wrap">
 								<h3>C/C++(STL)</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-								    <span>75%</span>
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								    <span>65%</span>
 								  	</div>
 								</div>
 							</div>
@@ -206,9 +206,9 @@
 							<div class="progress-wrap">
 								<h3>Python</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-								    <span>60%</span>
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
@@ -217,29 +217,7 @@
 							<div class="progress-wrap">
 								<h3>HTML/CSS/JavaScript</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								    <span>85%</span>
-								  	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="progress-wrap">
-								<h3>Django</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="50"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
-								    <span>50%</span>
-								  	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="progress-wrap">
-								<h3>Android</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="70"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
 								    <span>70%</span>
 								  	</div>
@@ -248,7 +226,29 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>MySQL</h3>
+								<h3>Java</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="85"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+								    <span>85%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>NodeJS</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
+								    <span>50%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>PostgreSQL/MySQL</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -259,7 +259,7 @@
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Git</h3>
+								<h3>MongoDB</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -270,33 +270,33 @@
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Java</h3>
+								<h3>JMP</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="50"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
-								    <span>50%</span>
+								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="80"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>NodeJS</h3>
+								<h3>SPSS modeler</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-9" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								 	<div class="progress-bar color-9" role="progressbar" aria-valuenow="80"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>OpenCV</h3>
+								<h3>Git</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="25"
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="30"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:25%">
-								    <span>25%</span>
+								    <span>30%</span>
 								  	</div>
 								</div>
 							</div>
@@ -502,7 +502,7 @@ Here also we will do the same as you will upload some files to a domain and ever
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><strong>vinaysomawat@hotmail.com</strong></p>
+									<p><strong>rudxowl@gmail.com</strong></p>
 								</div>
 							</div>
 
@@ -555,10 +555,8 @@ Here also we will do the same as you will upload some files to a domain and ever
             <div class="wrapper">
                 <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
             <h1>WANT MORE OF ME?</h1>
-               <p><a href="https://twitter.com/Vinay_Somawat"><i class="icon-twitter2"></i></a>
-					<a href="https://github.com/vinaysomawat"><i class="icon-github"></i></a>
-					<a href="https://www.instagram.com/somawatvinay/"><i class="icon-instagram"></i></a>
-					<a href="https://www.linkedin.com/in/vinaysomawat/"><i class="icon-linkedin2"></i></a></p>
+					<a href="https://github.com/rudxowl"><i class="icon-github"></i></a>
+					<a href="https://www.linkedin.com/in/gyungtai-min-579287136/"><i class="icon-linkedin2"></i></a></p>
                 <p><strong>Thanks for stopping by.</strong></p>
             </div>
             </div>
