--- a/index.html
+++ b/index.html
@@ -161,20 +161,12 @@
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="22" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Courses</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="12" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Computer Sience Courses</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="14" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Projects and Apps</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Published Articles</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="75" data-speed="5000" data-refresh-interval="10"></span>
-							<span class="colorlib-counter-label">Percentile Internationally</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="8" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Data Analytics Courses</span>
 						</div>
 					</div>
 				</div>
@@ -186,6 +178,9 @@
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 						<!--	<span class="heading-meta">My Specialty</span> -->
 							<h2 class="colorlib-heading animate-box">Skills</h2>
+						</div>
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<h3 class="colorlib-heading animate-box">Programming</h3>
 						</div>
 					</div>
 					<div class="row">
@@ -210,6 +205,18 @@
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
 								    <span>80%</span>
 								  	</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>R</h3>
+								<div class="progress">
+									<div class="progress-bar color-11" role="progressbar" aria-valuenow="70"
+										aria-valuemin="0" aria-valuemax="100" style="width:85%">
+										<span>70%</span>
+										</div>
 								</div>
 							</div>
 						</div>
@@ -246,6 +253,9 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<h3 class="colorlib-heading animate-box">Database</h3>
+						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>PostgreSQL/MySQL</h3>
@@ -267,6 +277,9 @@
 								  	</div>
 								</div>
 							</div>
+						</div>
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<h3 class="colorlib-heading animate-box">Data Anaytics</h3>
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
@@ -292,11 +305,11 @@
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Git</h3>
+								<h3>Tableau</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="30"
+								 	<div class="progress-bar color-10" role="progressbar" aria-valuenow="30"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:25%">
-								    <span>30%</span>
+								    <span>70%</span>
 								  	</div>
 								</div>
 							</div>
@@ -323,7 +336,7 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">AllinCall Research & Solutions</a> <span>Technical Blog Writer</span></h2>
+					                  <h2><a href="#">Seoul Institute of The Art</a> <span>Social Media Marketing Editor</span></h2>
 					                  <p>The company provides technology-backed AI/ML solutions.<br>I blog on latest technical topics (e.g. Data Science, Cloud Native, JavaScript Framework etc.).</p>
 					               </div>
 					            </div>
@@ -405,84 +418,6 @@
                 </div>
             </section> -->
 
-            <section class="colorlib-blog" data-section="blog">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<!--<span class="heading-meta">Read</span> -->
-							<h2 class="colorlib-heading">Recent Blog</h2>
-						</div>
-					</div>
-                    <div class="row">
-                        <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="https://medium.com/quick-code/cash-memo-bills-generator-for-local-shops-25e56fa0cc3c" class="blog-img"><img src="images/1_YrXFUOLHcGNbe0GEClhWlQ.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>January 18, 2019 </small> | <small> Python </small></span>
-									<h3><a href="https://medium.com/quick-code/cash-memo-bills-generator-for-local-shops-25e56fa0cc3c">How I Build Cash Memo and Bill Generator for Local Shops</a></h3>
-                                    <p><strong>MEDIUM ARTICLE</strong></p>
-									<p>For local shops, It takes a lot of time to create an excel sheet and make a cash-memo/bill. So we came up with a solution where the shopkeeper just needs to enter the data and the bill will automatically be generated through the script..</p>
-								</div>
-							</div>
-						</div>
-                        <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="https://hackernoon.com/how-to-convert-a-website-into-an-android-app-from-scratch-de19c84a5801" class="blog-img"><img src="images/android.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>January 12, 2019 </small> | <small> Android-Development </small></span>
-									<h3><a href="https://hackernoon.com/how-to-convert-a-website-into-an-android-app-from-scratch-de19c84a5801">How to convert a website into an Android app from scratch?</a></h3>
-                                    <p><strong>MEDIUM ARTICLE</strong></p>
-									<p>In this tutorial, we will learn How to Convert a Website into an Android Application using Android Studio.
-If you do not know anything about Android Studio yet, Don’t worry.
-We will start everything from scratch..</p>
-								</div>
-							</div>
-						</div>
-                        <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="https://medium.com/quick-code/django-distributing-files-among-users-efa729598ba4" class="blog-img"><img src="images/cover.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>January 10, 2019 </small> | <small> Web-Development </small></span>
-									<h3><a href="https://medium.com/quick-code/django-distributing-files-among-users-efa729598ba4">Django: Distributing Files among Users</a></h3>
-                                    <p><strong>MEDIUM ARTICLE</strong></p>
-									<p>Whenever a thought pops into my mind, to transform it into a language mode and giving it the shape of reality, takes just a few minutes, I found myself doing it there, with the help of Django. It makes the web development process very easy and the developer can fully focus on the devlopment process and optimize performance.
-Here also we will do the same as you will upload some files to a domain and everyone can access it within the organization..</p>
-								</div>
-							</div>
-						</div>
-                        <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="blog/01-19/blog2.html" class="blog-img"><img src="images/shutterstock_217872049.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>January 06, 2019 </small> | <small> Life-style </small></span>
-									<h3><a href="blog/01-19/blog2.html">Some important lessons, I learned during my college life!</a></h3>
-									<p>College is not about exams, fun, study, relax. It is more than that?</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="blog/01-19/blog1.html" class="blog-img"><img src="images/download%20(1).png" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>January 04, 2019 </small> | <small> Education </small></span>
-									<h3><a href="blog/01-19/blog1.html">How to get Finacial Aid From Coursera?</a></h3>
-									<p>Apply Now.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="blog/12-18/blog1.html" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>December 25, 2018 </small> | <small> Life-style </small></span>
-									<h3><a href="blog/12-18/blog1.html">What motivates me...</a></h3>
-									<p>Practice makes perfection, I can't elaborate more than this.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
 
 
 			<section class="colorlib-contact" data-section="contact">
@@ -511,7 +446,7 @@ Here also we will do the same as you will upload some files to a domain and ever
 									<i class="icon-location"></i>
 								</div>
 								<div class="colorlib-text">
-                                    <p><strong>Jaipur, Rajasthan</strong></p>
+                                    <p><strong>Denver, Colorado</strong></p>
 								</div>
 							</div>
 
