--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					</ul>
 				</div>
              <div class="colorlib-footer">
-                 <h3><strong><a href="Gyungtai_Min_Resume.pdf">My Resume</a></strong></h3>
+                 <h3><strong><a href="Resume(Gyungtai_Min).pdf">My Resume</a></strong></h3>
                  <div class="colorlib-icon">
             <ul>
 
@@ -117,13 +117,13 @@
 							<div class="row">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<a href="data_analysis/da.html" target="_blank"><div class="services color-1">
-										<span class="icon2"><i class="fas fa-analytics"></i></span>
+										<span class="icon2"><i class="fa fa-analytics"></i></span>
 										<h3>Data Analytics</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<a href="web-dev/webdev.html" target="_blank"><div class="services color-2">
-										<span class="icon2"><i class="far fa-browser"></i></span>
+										<span class="icon2"><i class="fa fa-browser"></i></span>
 										<i class="far fa-browser"></i>
 										<h3>Web<br> Development</h3>
 									</div>
@@ -295,7 +295,7 @@
 								<h3>Tableau</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-10" role="progressbar" aria-valuenow="30"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:25%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
 								    <span>70%</span>
 								  	</div>
 								</div>
