--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 	</script>
 
 
-
 	</head>
 	<body>
 	<div id="colorlib-page">
@@ -119,20 +118,19 @@
 							<div class="row">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<a href="data_analysis/da.html" target="_blank"><div class="services color-1">
-										<span class="icon2"><i class="fa fa-analytics"></i></span>
+										<span class="icon2"><i class="icon-line-chart"></i></span>
 										<h3>Data Analytics</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-									<a href="web-dev/webdev.html" target="_blank"><div class="services color-2">
-										<span class="icon2"><i class="fa fa-browser"></i></span>
-										<i class="far fa-browser"></i>
+									<a href="web_dev/webdev.html" target="_blank"><div class="services color-2">
+										<span class="icon2"><i class="icon-window-maximize"></i></span>
 										<h3>Web<br> Development</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
-									<a href="software-dev/software.html" target="_blank"><div class="services color-3">
-										<span class="icon2"><i class="fa fa-code"></i></span>
+									<a href="software_dev/software.html" target="_blank"><div class="services color-3">
+										<span class="icon2"><i class="icon-code"></i></span>
 										<h3>Software<br> Development</h3>
 									</div>
 							</a></div>
@@ -447,15 +445,6 @@
 	</div><!-- end:container-wrap -->
 	</div><!-- end:colorlib-page -->
 
-       <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131596504-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-131596504-1');
-</script>
 
 
 	<!-- jQuery -->
