--- a/software_dev/software.html
+++ b/software_dev/software.html
@@ -57,7 +57,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/TomPic.png);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Gyungtai Tom Min</a></h1>
+				<h1 id="colorlib-logo">Gyungtai Tom Min</h1>
 				<p><strong>Applied Computing / Statistics | University of Devner</strong></p>
 			</div>
             <div class="text-center"><a href="https://rudxowl.github.io/PortfolioWeb/">Home</a></div>
