--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<a href="web_dev/webdev.html" target="_blank"><div class="services color-2">
-										<span class="icon2"><i class="icon-windows"></i></span>
+										<span class="icon2"><i class="icon-data"></i></span>
 										<h3>Web<br> Development</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<a href="software_dev/software.html" target="_blank"><div class="services color-3">
-										<span class="icon2"><i class="icon-code"></i></span>
+										<span class="icon2"><i class="fa fa-code"></i></span>
 										<h3>Software<br> Development</h3>
 									</div>
 							</a></div>
@@ -434,6 +434,7 @@
             <div class="wrapper">
                 <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
             <h1>WANT MORE OF ME?</h1>
+						&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="https://github.com/rudxowl"><i class="icon-github"></i></a>
 					<a href="https://www.linkedin.com/in/gyungtai-min-579287136/"><i class="icon-linkedin2"></i></a></p>
                 <p><strong>Thanks for stopping by.</strong></p>
