--- a/index.html
+++ b/index.html
@@ -434,7 +434,11 @@
             <div class="wrapper">
                 <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
             <h1>WANT MORE OF ME?</h1>
-						&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+						<a href="https://www.linkedin.com/in/vinasomawat/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+						<a href="https://github.com/vinaysomawat" style="color: black;" class="fa fa-github"></a></p>
+
 					<a href="https://github.com/rudxowl"><i class="icon-github"></i></a>
 					<a href="https://www.linkedin.com/in/gyungtai-min-579287136/"><i class="icon-linkedin2"></i></a></p>
                 <p><strong>Thanks for stopping by.</strong></p>
