--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
 				</div>
              <div class="colorlib-footer">
                  <h3><strong><a href="Resume(Gyungtai_Min).pdf">My Resume</a></strong></h3>
-                 <div class="colorlib-icon">
-            <ul>
+								 <br>
+								 <a href="https://github.com/rudxowl"><i class="icon-github"></i></a>
+			 					<a href="https://www.linkedin.com/in/gyungtai-min-579287136/"><i class="icon-linkedin2"></i></a>
 
-				</ul>
-                     </div>
             </div>
 </nav>
 		</aside>
@@ -435,9 +434,6 @@
                 <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
             <h1>WANT MORE OF ME?</h1>
 
-
-						<a href="https://www.linkedin.com/in/vinasomawat/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="https://github.com/vinaysomawat" style="color: black;" class="fa fa-github"></a></p>
 
 					<a href="https://github.com/rudxowl"><i class="icon-github"></i></a>
 					<a href="https://www.linkedin.com/in/gyungtai-min-579287136/"><i class="icon-linkedin2"></i></a></p>
