--- a/index.html
+++ b/index.html
@@ -89,10 +89,14 @@
 				</div>
              <div class="colorlib-footer">
                  <h3><strong><a href="Resume(Gyungtai_Min).pdf">My Resume</a></strong></h3>
-								 <br>
-								 <a href="https://github.com/rudxowl"><i class="icon-github"></i></a>
-			 					<a href="https://www.linkedin.com/in/gyungtai-min-579287136/"><i class="icon-linkedin2"></i></a>
 
+
+                 <div class="colorlib-icon">
+            <ul>
+						<li><a href="https://github.com/rudxowl"><i class="icon-github"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
+				</ul>
+                     </div>
             </div>
 </nav>
 		</aside>
