--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
 
                  <div class="colorlib-icon">
             <ul>
-						<li><a href="https://github.com/rudxowl"><i class="icon-github"></i></a></li>
+	                <p><strong><small>Connect me at:</small></strong></p>
+						<li><a href="mailto: rudxowl@gmail.com"><i class="icon-mail"></i></a></li>
+						<li><a href="https://github.com/rudxowl/PortfolioWeb"><i class="icon-github"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
 				</ul>
                      </div>
@@ -384,7 +386,7 @@
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><strong>rudxowl@gmail.com</strong></p>
+									<p><strong><a href = "mailto: rudxowl@gmail.com">rudxowl@gmail.com</a></strong></p>
 								</div>
 							</div>
 
@@ -436,11 +438,11 @@
         <footer>
             <div class="wrapper">
                 <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-            <h1>WANT MORE OF ME?</h1>
+									<ul>
+									<li><a href="https://github.com/rudxowl/PortfolioWeb"><i class="icon-github"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
+							</ul>
 
-
-					<a href="https://github.com/rudxowl"><i class="icon-github"></i></a>
-					<a href="https://www.linkedin.com/in/gyungtai-min-579287136/"><i class="icon-linkedin2"></i></a></p>
                 <p><strong>Thanks for stopping by.</strong></p>
             </div>
             </div>
