--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 </div>
 			</section>
         <footer>
-            <div class="wrapper">
+          <!--  <div class="wrapper">
                 <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 									<ul>
 									<li><a href="https://github.com/rudxowl/PortfolioWeb"><i class="icon-github"></i></a></li>
@@ -445,7 +445,7 @@
 
                 <p><strong>Thanks for stopping by.</strong></p>
             </div>
-            </div>
+            </div>-->
             </footer>
 
 		</div><!-- end:colorlib-main -->
