--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
 
                  <div class="colorlib-icon">
             <ul>
-	                <p><strong><small>Connect me at:</small></strong></p>
 						<li><a href="mailto: rudxowl@gmail.com"><i class="icon-mail"></i></a></li>
 						<li><a href="https://github.com/rudxowl/PortfolioWeb"><i class="icon-github"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
@@ -123,13 +122,13 @@
 							<div class="row">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<a href="data_analysis/da.html" target="_blank"><div class="services color-1">
-										<span class="icon2"><i class="icon-chart-linet"></i></span>
+										<span class="icon2"><i class="icon-chart-line"></i></span>
 										<h3>Data Analytics</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<a href="web_dev/webdev.html" target="_blank"><div class="services color-2">
-										<span class="icon2"><i class="icon-data"></i></span>
+										<span class="icon2"><i class="icon-windows"></i></span>
 										<h3>Web<br> Development</h3>
 									</div>
 								</a></div>
@@ -146,23 +145,7 @@
                 </div>
 			</section>
 
-            <div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/denver_night.jpg);" data-stellar-background-ratio="0.5">
-				<div class="overlay"></div>
-				<div class="colorlib-narrow-content">
-					<div class="row">
-					</div>
-					<div class="row">
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="12" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Computer Sience Courses</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="8" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Data Analytics Courses</span>
-						</div>
-					</div>
-				</div>
-			</div>
+
 
 			<section class="colorlib-skills" data-section="skills">
 				<div class="colorlib-narrow-content">
@@ -392,10 +375,10 @@
 
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="icon-location"></i>
+									<i class="icon-Linkedin2"></i>
 								</div>
 								<div class="colorlib-text">
-                                    <p><strong>Denver, Colorado</strong></p>
+                                    <p><strong><a href="https://www.linkedin.com/in/gyungtai-min-579287136//">Linkedin</a></strong></p>
 								</div>
 							</div>
 
@@ -436,16 +419,13 @@
                 </div>
 			</section>
         <footer>
-          <!--  <div class="wrapper">
+            <div class="wrapper">
                 <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-									<ul>
-									<li><a href="https://github.com/rudxowl/PortfolioWeb"><i class="icon-github"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
-							</ul>
+
 
                 <p><strong>Thanks for stopping by.</strong></p>
             </div>
-            </div>-->
+            </div>
             </footer>
 
 		</div><!-- end:colorlib-main -->
