--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                  <h3><strong><a href="Resume(Gyungtai_Min).pdf">My Resume</a></strong></h3>
 
 
-                 <div class="colorlib-icon">
+
             <ul>
 						<li><a href="mailto: rudxowl@gmail.com"><i class="icon-mail"></i></a></li>
 						<li><a href="https://github.com/rudxowl/PortfolioWeb"><i class="icon-github"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
 				</ul>
-                     </div>
+
             </div>
 </nav>
 		</aside>
@@ -128,7 +128,7 @@
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<a href="web_dev/webdev.html" target="_blank"><div class="services color-2">
-										<span class="icon2"><i class="icon-windows"></i></span>
+										<span class="icon2"><i class="icon-data"></i></span>
 										<h3>Web<br> Development</h3>
 									</div>
 								</a></div>
@@ -375,7 +375,7 @@
 
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="icon-Linkedin2"></i>
+									<i class="icon-linkedin2"></i>
 								</div>
 								<div class="colorlib-text">
                                     <p><strong><a href="https://www.linkedin.com/in/gyungtai-min-579287136//">Linkedin</a></strong></p>
