--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<a href="data_analysis/da.html" target="_blank"><div class="services color-1">
 										<span class="icon2"><i class="icon-chart-line"></i></span>
-										<h3>Data Analytics</h3>
+										<h3>Data<br> Analytics</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
@@ -163,11 +163,11 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>C/C++(STL)</h3>
+								<h3>C/C++</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>65%</span>
+								    <span>70%</span>
 								  	</div>
 								</div>
 							</div>
@@ -189,7 +189,7 @@
 								<h3>R</h3>
 								<div class="progress">
 									<div class="progress-bar color-11" role="progressbar" aria-valuenow="70"
-										aria-valuemin="0" aria-valuemax="100" style="width:85%">
+										aria-valuemin="0" aria-valuemax="100" style="width:70%">
 										<span>70%</span>
 										</div>
 								</div>
@@ -261,7 +261,7 @@
 								<h3>JMP</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
 								    <span>80%</span>
 								  	</div>
 								</div>
@@ -269,7 +269,7 @@
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>SPSS modeler</h3>
+								<h3>SPSS</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-9" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -308,14 +308,14 @@
 													<div class="timeline-entry-inner">
 
 														 <div class="timeline-icon color-1">
-																<i class="fas fa-analytics"></i>
+																<i class="icon-chart-line"></i>
 														 </div>
 
 														 <div class="timeline-label">
 																<h2><a href="#">A&K Media</a> <span>Sep 2018 - Present</span></h2>
-																					 <p><strong>Data Analyst</strong>
-																						 <br>Analyzed data of client's business and their website using Google Analytics, Google Tag Manager, Tableau, Excel,
-																						 <br>and made analysis report to improve their marketing strategy.</p>
+																					 <p><strong>Data Analyst(Web)</strong>
+																						 <br>Analyzed data of client's business and their website using Google Analytics, Google Tag Manager, Tableau, Advanced Microsoft Excel.</p>
+																						 <br>Optimized Google Analytics tool, Google Ads and campaign to improve marketing strategy.
 																<p></p>
 														 </div>
 													</div>
