--- a/web_dev/webdev.html
+++ b/web_dev/webdev.html
@@ -60,7 +60,7 @@
 				<h1 id="colorlib-logo"><a href="index.html">Gyungtai Tom Min</a></h1>
 				<p><strong>Applied Computing / Statistics | University of Devner</strong></p>
 			</div>
-            <div class="text-center"><a href="https://rudxowl.github.io">Home</a></div>
+            <div class="text-center"><a href="https://rudxowl.github.io/PortfolioWeb/">Home</a></div>
             <br>
             <br><br>
             <br>
@@ -89,7 +89,7 @@
 										<h2 class="colorlib-heading">Web Development</h2>
 
 
-												
+
 									</div>
 								</div>
 							</div>
