--- a/data_analysis/da.html
+++ b/data_analysis/da.html
@@ -60,7 +60,7 @@
 				<h1 id="colorlib-logo"><a href="index.html">Gyungtai Tom Min</a></h1>
 				<p><strong>Applied Computing / Statistics | University of Devner</strong></p>
 			</div>
-            <div class="text-center"><a href="https://rudxowl.github.io">Home</a></div>
+            <div class="text-center"><a href="https://rudxowl.github.io/PortfolioWeb/">Home</a></div>
             <br>
             <br><br>
             <br>
@@ -70,6 +70,7 @@
             <div class="colorlib-footer">
             <ul>
                 <p><strong><small>Connect me at:</small></strong></p>
+					<li><a href="mailto: rudxowl@gmail.com"><i class="icon-mail"></i></a></li>
 					<li><a href="https://github.com/rudxowl"><i class="icon-github"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
 				</ul>
@@ -86,15 +87,17 @@
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<h2 class="colorlib-heading">Data Analysis</h2>
-                                        <p>Training and taking part in programming contests make you more a more disciplined, faster and focused coder.<br>Taking part in competitive programming teaches you how to be more focused on the task and not only complete it quickly, but accurately. These skills are highly beneficial for any job, not just in coding.</p>
-                                        <p><strong>Although I am not much good in Competitive Programming but I always try to give my best shot in every coding contest.</strong></p>
+										<h2 class="colorlib-heading">Data Analytics</h2>
+										<p>If you want to see the code of my projects, <a href="https://github.com/rudxowl/Data_Analytics_in_Python"><strong>Click Here</Strong></a></p>
 
-																				<p><a href="https://github.com/rudxowl/Data_Analytics_in_Python"><strong>Data Analysis App in Python</strong></a></p>
-																				<p>The source data of this program is Sex Ratio in India. This python application provides serveral data analysis tests such as t Test, ANOVA test, Regression test for given data set.
-																					<br> If you choose one test option it will show you a brif analysis report</p>
 
-																				<img src="images/da1.png"><img src="images/da2.png"><br><br>
+																				<p><a href="https://github.com/rudxowl/Data_Analytics_in_Python"><strong>Automatic Data Analysis Program in Python</strong></a></p>
+																				<p>This program is an automatic analysis program which shows the relationship between sex ratio and the other varialbe user chose. The program provides serveral data analytic test options such as t Test, ANOVA test, Regression test.
+																					<br> If you choose one test option it will show you a brif analysis report about the relationship between sex ratio and the other variable</p>
+
+																			<p>	<img src="images/da1.png"></p>
+																			<p><img src="images/da2.png"></p>
+																			<br><br>
 									</div>
 								</div>
 							</div>
