--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/TomPic.png);"></div>
-				<h1 id="colorlib-logo"><a href="https://rudxowl.github.io">Gyungtai Tom Min</a></h1>
+				<h1 id="colorlib-logo">Gyungtai Tom Min</h1>
 				<p><strong>Applied Computing / Statistics | University of Denver</strong></p>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -87,12 +87,14 @@
 						<li><a href="#" data-nav-section="contact">Contact</a></li><br>
 					</ul>
 				</div>
+
              <div class="colorlib-footer">
                  <h3><strong><a href="Resume(Gyungtai_Min).pdf">My Resume</a></strong></h3>
 
 
 
             <ul>
+							    <p><strong><small>Connect me at:</small></strong></p>
 						<li><a href="mailto: rudxowl@gmail.com"><i class="icon-mail"></i></a></li>
 						<li><a href="https://github.com/rudxowl/PortfolioWeb"><i class="icon-github"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
@@ -114,8 +116,8 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<h2 class="colorlib-heading">About Me</h2>
-										<p>Hello! <strong>Tom </strong>is Applied computing and Statistics undergraduate student at University of Denver.</p>
-										<p>He focused on web developement and data analytics.</p>
+										<p>Hello! <strong>Tom </strong>is Computer Science and Statistics undergraduate student at University of Denver.</p>
+										<p>He has both Computer Science and Business Analytics background, and focus on Data Analytics.</p>
 									</div>
 								</div>
 							</div>
@@ -315,7 +317,7 @@
 																<h2><a href="#">A&K Media</a> <span>Sep 2018 - Present</span></h2>
 																					 <p><strong>Data Analyst(Web)</strong>
 																						 <br>Analyzed data of client's business and their website using Google Analytics, Google Tag Manager, Tableau, Advanced Microsoft Excel.</p>
-																						 <br>Optimized Google Analytics tool, Google Ads and campaign to improve marketing strategy.
+																						 Optimized Google Analytics tool, Google Ads and campaign to improve marketing strategy.
 																<p></p>
 														 </div>
 													</div>
@@ -358,7 +360,7 @@
                         <div class="col-md-12">
 						<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 							<h2 class="colorlib-heading">Contact</h2>
-                            <p>If you have a challenge for me, or an opportunity, or would simply like to stay in touch, feel free to contact me!</p>
+                            <p>Feel free to contact me!</p>
 						</div>
 					</div>
                     </div>
@@ -382,51 +384,12 @@
 								</div>
 							</div>
 
-							<!--<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
-									<i class="icon-phone"></i>
-								</div>
-								<div class="colorlib-text">
-									<p><strong><a href="tel://">+91-9461063012</a></strong></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-7 col-md-push-1">
-							<div class="row">
-								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
-									<form action="">
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Name">
-										</div>
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Email">
-										</div>
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Subject">
-										</div>
-										<div class="form-group">
-											<textarea name="" id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-										</div>
-										<div class="form-group">
-											<input type="submit" class="btn btn-primary btn-send-message" value="Send Message">
-										</div>
-									</form>
-								</div>
 
-							</div> -->
 						</div>
 					</div>
                 </div>
 			</section>
-        <footer>
-            <div class="wrapper">
-                <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 
-
-                <p><strong>Thanks for stopping by.</strong></p>
-            </div>
-            </div>
-            </footer>
 
 		</div><!-- end:colorlib-main -->
 	</div><!-- end:container-wrap -->
