sofware, web page

--- a/data_analysis/da.html
+++ b/data_analysis/da.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/TomPic.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Gyungtai Tom Min</a></h1>
-				<p><strong>Applied Computing / Statistics | University of Devner</strong></p>
+				<p><strong>Computer Science / Statistics | University of Devner</strong></p>
 			</div>
             <div class="text-center"><a href="https://rudxowl.github.io/PortfolioWeb/">Home</a></div>
             <br>
