--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/TomPic.png);"></div>
 				<h1 id="colorlib-logo">Gyungtai Tom Min</h1>
-				<p><strong>Applied Computing / Statistics | University of Denver</strong></p>
+				<p><strong>Computer Science / Statistics | University of Denver</strong></p>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
