--- a/software_dev/software.html
+++ b/software_dev/software.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/TomPic.png);"></div>
 				<h1 id="colorlib-logo">Gyungtai Tom Min</h1>
-				<p><strong>Applied Computing / Statistics | University of Devner</strong></p>
+				<p><strong>Computer Science / Statistics | University of Devner</strong></p>
 			</div>
             <div class="text-center"><a href="https://rudxowl.github.io/PortfolioWeb/">Home</a></div>
             <br>
@@ -70,6 +70,7 @@
             <div class="colorlib-footer">
             <ul>
                 <p><strong><small>Connect me at:</small></strong></p>
+					<li><a href="mailto: rudxowl@gmail.com"><i class="icon-mail"></i></a></li>
 					<li><a href="https://github.com/rudxowl"><i class="icon-github"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
 				</ul>
