--- a/data_analysis/da.html
+++ b/data_analysis/da.html
@@ -95,10 +95,10 @@
 																				<p>This program is an automatic analysis program which shows the relationship between sex ratio and the other varialbe user chose. The program provides serveral data analytic test options such as T test, ANOVA test, Regression test.
 																					<br> If you choose one test option it will show you a brif analysis report about the relationship between sex ratio and the other variable</p>
 
-																			<p>	<img src="images/da1.png"></p>
-																			<p><img src="images/da2.png"></p>
-																			<p><img src="images/da3.png"></p>
-																			<p><img src="images/da4.png"></p>
+																			<p><img src="images/da1.png"></p>
+																			<p><img src="images/da2.PNG"></p>
+																			<p><img src="images/da3.PNG"></p>
+																			<p><img src="images/da4.PNG"></p>
 																			<br><br>
 									</div>
 								</div>
