--- a/software_dev/software.html
+++ b/software_dev/software.html
@@ -96,7 +96,7 @@
 												<p>Java based chat program using socket, it also includes a drawing panel that could draw a picture on
 the screen using the mouse. Every painter who is connected with server can communicate via chat panel.</p>
 												<p><img src="images/painterschat.PNG"></p>
-												<p><img src="images/painterschat2.PNG"width ="50%" height ="50%"></p>
+												<p><img src="images/painterschat2.png"width ="50%" height ="50%"></p>
 											</div>
 										</div>
 									</div>
