--- a/index.html
+++ b/index.html
@@ -471,5 +471,7 @@
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
 
+
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 	</body>
 </html>
