--- a/data_analysis/da.html
+++ b/data_analysis/da.html
@@ -93,7 +93,7 @@
 									<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 										<div class="col-md-12">
 											<div class="Automatic Data Analysis-desc">
-																						<p><h2>Automatic Data Analysis Program in Python</h2></p>
+																						<h2>Automatic Data Analysis Program in Python</h2>
 																						<p>This program is an automatic analysis program which shows the relationship between sex ratio and the other varialbe user chose. The program provides serveral data analytic test options such as T test, ANOVA test, Regression test.
 																							<br> If you choose one test option it will show you a brif analysis report about the relationship between sex ratio and the other variable</p>
 													</div>
