--- a/index.html
+++ b/index.html
@@ -418,9 +418,12 @@
 							<hr>
               <p>Feel free to contact me!</p>
 
+
 									<p>
 									<i class="fa fa-envelope"></i>
-									<strong><a href = "mailto: rudxowl@gmail.com">rudxowl@gmail.com</a></strong></p>
+									<strong><a href = "mailto: rudxowl@gmail.com">rudxowl@gmail.com</a></strong>
+									<i class="icon-linkedin2"></i>
+                	<strong><a href="https://www.linkedin.com/in/gyungtai-min-579287136//">Linkedin</a></strong></p>
 
 									<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="tom-min-579287136"><a class="LI-simple-link" href='https://www.linkedin.com/in/tom-min-579287136?trk=profile-badge'>Tom Min</a></div>
 
