--- a/software_dev/software.html
+++ b/software_dev/software.html
@@ -109,7 +109,7 @@ the screen using the mouse. Every painter who is connected with server can commu
 			<div class="colorlib-footer">
 					 <p style="text-align: center; margin-bottom: 0px; font-size: 30px;">
 		 <a href="mailto: rudxowl@gmail.com"style="color: black;"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
-		 <a href="www.linkedin.com/in/tom-min-579287136"style="color: black;"><i class="fa fa-linkedin-square"></i></a>&nbsp;&nbsp;
+		 <a href="https://www.linkedin.com/in/tom-min-579287136/"style="color: black;"><i class="fa fa-linkedin-square"></i></a>&nbsp;&nbsp;
 		 <a href="https://github.com/rudxowl/PortfolioWeb"style="color: black;"><i class="fa fa-github"></i></a>
 		 </p>
 
