--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 										<hr>
 										<p>Hello!
 											<br>
-											<strong>Tom </strong>is Computer Science and Statistics undergraduate student at University of Denver.
-											<br>He has both Computer Science and Business Analytics background, and focus on Data Analytics.</p>
+											<strong>Tom</strong> is a Computer Science and Statistics graduate from the University of Denver.
+											<br> He has a background in both Computer Science and Business Analytics and a focus in Data Analytics.</p>
 									</div>
 								</div>
 							</div>
