--- a/data_analysis/da.html
+++ b/data_analysis/da.html
@@ -75,7 +75,7 @@
 									<div class="about-desc">
 										<h2>Data Analytics</h2>
 										<hr>
-										<p>If you want to see the code of my projects, <a href="https://github.com/rudxowl/Data_Analytics_in_Python"><strong>Click Here</Strong></a></p>
+										<p><a href="https://github.com/rudxowl/Data_Analytics_in_Python"><strong>Click Here</Strong> to check out my code.</a></p>
 
 
 									</div>
