--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									<div class="projects-desc">
 										<h2>Projects</h2>
 										<hr>
-										<p>If you want to check my projects, <Strong>Click</Strong> below Icons.</p>
+										<p><Strong>Click</Strong> the icons below to check out my projects.</p>
 									</div>
 								</div>
 							</div>
