--- a/web_dev/webdev.html
+++ b/web_dev/webdev.html
@@ -74,7 +74,7 @@
 									<div class="about-desc">
 										<h2>Web Development</h2>
 										<hr>
-										<p>If you want to see the code of my projects, <a href="https://github.com/rudxowl/PortfolioWeb"><strong>Click Here</Strong></a></p>
+										<p><a href="https://github.com/rudxowl/PortfolioWeb"><strong>Click Here</Strong></a> to check out my code.</p>
 								</div>
 								</div>
 							</div>
