--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				</div>
 
 				<div class="colorlib-footer">
-						<h3><strong><a href="Resume(Gyungtai_Min).pdf">My Resume</a></strong></h3>
+						<h3><strong><a href="Resume(Tom_Min).pdf">My Resume</a></strong></h3>
 </div>
 </nav>
 
